Add images and update home page layout.

--- a/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
+++ b/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
@@ -1,5 +1,18 @@
 <div class='row'>
-    <div class='col-12'>
-        <h1>HOME PAGE</h1>
+    <div class='col-12 header-background'>
+        <img src='../../../assets/images/nav_bar_background.png' width='100%'>
+    </div>
+
+    <div class='col-12 form-wrapper'>
+        <div class='d-flex justify-content-center'>
+
+            <h2>Design Packages Selection Form</h2>
+
+            <div>
+                <h3>Select Desired Packages</h3>
+
+                <button></button>
+            </div>
+        </div>
     </div>
 </div>
