Add Foundation sites package.

--- a/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
+++ b/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
@@ -6,13 +6,7 @@
     <div class='col-12 form-wrapper'>
         <div class='d-flex justify-content-center'>
 
-            <h2>Design Packages Selection Form</h2>
-
-            <div>
-                <h3>Select Desired Packages</h3>
-
-                <button></button>
-            </div>
+            <h2>HOME PAGE 👍</h2>
         </div>
     </div>
 </div>
