Update names and imports.

--- a/VesperaWebAppUI/src/app/homepage/header/header.component.html
+++ b/VesperaWebAppUI/src/app/homepage/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class='main-header-container'>
+    <header class='header-wrapper'>
+        <div class='row'>
+
+            <div class=col-sm-12>
+                HELLO THERE
+            </div>
+
+        </div>
+    </header>
+</div>
