--- a/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
+++ b/VesperaWebAppUI/src/app/homepage/homepage-container/homepage-container.component.html
@@ -1,6 +1,9 @@
 <div class='row'>
+    
     <div class='col-12 header-background'>
+        <h1 class='example-text'>TEST TEXT</h1>
         <img src='../../../assets/images/nav_bar_background.png' width='100%'>
+
     </div>
 
     <div class='col-12 form-wrapper'>
